kubernetes/thelounge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge
  namespace: thelounge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: thelounge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thelounge
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: thelounge
          image: ghcr.io/thelounge/thelounge:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: thelounge-data
              mountPath: /var/opt/thelounge
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: thelounge-data
          persistentVolumeClaim:
            claimName: thelounge-data
