kubernetes/thelounge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thelounge
  namespace: thelounge
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: thelounge
  ports:
    - name: http
      port: 9000
      targetPort: http
      protocol: TCP
