kubernetes/thelounge/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thelounge-public
  namespace: thelounge
spec:
  ingressClassName: nginx
  rules:
    - host: thelounge.nodadyoushutup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thelounge
                port:
                  number: 9000
